--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,17 +9,17 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        <li class="nav-item" routerLink="" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact: true}">
+          <a class="nav-link" href="javascript: void()" >Home </a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="homeProduct">Home Product</a>
+        <li class="nav-item" routerLink="products" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact: true}">
+          <a class="nav-link"  href="javascript: void()">Products</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">add Product</a>
+        <li class="nav-item" routerLink="products/create" [routerLinkActive]="['active']" >
+          <a class="nav-link" href="javascript: void()">add Product</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="homeTodo">Home Todo</a>
+        <li class="nav-item" routerLink="todo" [routerLinkActive]="['active']">
+          <a class="nav-link" href="javascript: void()">Home Todo</a>
         </li>
 
       </ul>
@@ -28,4 +28,4 @@
   </nav>
 
 
- <app-home></app-home>
+<router-outlet></router-outlet>
